# tf-playground

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/playground/: beginners.py  expert.py
src/playground/images/: image-classification.ipynb  image-segmentation.ipynb  image_classification.py  image_segmentation.py
src/playground/keras/: image_classification.ipynb
src/playground/text/: word-embeddings.ipynb
