[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playground"
version = "0.0.1"
description = "Tensorflow playground"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["tensorflow", "machine learning", "deep learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "tensorflow",
  "tesnorflow-dataset",
  "matplotlib",
  "numpy",
]

[tool.setuptools]
packages = ["playground"]

# [tool.setuptools.packages.find]
# where = ["src"]
