[tool.poetry]
name = "tf-playground"
version = "1.1.0"
description = "TensorFlow playground"
license = "Apache-2.0"

authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
maintainers = [
  "Victor I. Afolabi <javafolabi@gmail.com>",
]

readme = "README.md"
repository = "https://github.com/victor-iyi/tf-playground"
keywords = ["tensorflow", "playground", "deep-learning"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache 2.0",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "playground", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"

 # TensorFlow for machine learning (general version).
tensorflow = { version = "*", markers = "sys_platform != 'darwin'" }
# TensorFlow for MacOS (with Apple silicon)
tensorflow-macos = { version = "*", markers = "sys_platform == 'darwin'" }
# Use Apple silicon acceleration.
tensorflow-metal = { version = "*", markers = "sys_platform == 'darwin'", optional = true }
# Library of datasets ready to use with tensorflow.
tensorflow-datasets = { version = ">=4.7.0", python = "3.7" }

# Python Imaging Libraray
Pillow = ">=9.3.0"
# Python plotting package.
matplotlib = ">=3.6.1"
# For array computing with Python.
numpy = ">=1.16"
# Python interface to Graphviz's Dot.
pydot = { version = "1.4.2", optional = true }

[tool.poetry.dev-dependencies]
# Automatically format Python code to PEP 8 style guide.
autopep8 = ">=1.7.0"
# A coverage plugin to provide sensible default settings.
covdefaults = { version = ">=2.2.0", optional = true }
# The modular source checker.
flake8 = ">=3.6.1"
# Scientific workspace & experimentation.
jupyterlab = ">=3.4.8"
# Optional static typing for Python
mypy = ">=0.982"
# Managing and maintaining pre-commit hooks.
pre-commit = ">=2.20.0"
# Python style guide checker.
pycodestyle = { version = "*", optional = true }
# Simple powerful testing with Python
pytest = ">=7.1.3"
# Python plugin for measuring coverage.
pytest-cov = { version = ">=4.0.0", optional = true }
# Generic virtualenv management and test cli tool.
tox = { version = ">=3.26.0", optional = true }

[tool.poetry.extras]
silicon = ["tensorflow-metal"]

[tool.poetry.urls]
"Bug Tracker"  = "https://github.com/victor-iyi/tf-playground/issues"

# Poetry build system. See: https://python-poetry.org/docs/pyproject
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Style hinting.
[tool.mypy]
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_incomplete_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
# show_error_content = true
warn_unused_configs = true
warn_unused_ignores = true
# warn_redundant_cast = true
warn_return_any = true
warn_unreachable = true
disallow_subclassing_any = false
disallow_untyped_decorators = false

# Pyright Type Checking.
[tool.pyright]
reportOptionalCall = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"

# Coverage report.
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.",
]

[tool.coverage.run]
plugin = "covdefaults"
